--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,7 +15,7 @@ body {
 }
 
 .backgroundImage {
-	background-Image: url(../img/wrench.png);
+	background-Image: url(..img/wrench.png;)
 	width: 400px;
 	height: 400px;
 h1 {
