--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,9 +15,14 @@ body {
 }
 
 .backgroundImage {
-	background-Image: url(..img/wrench.png;)
+	background-Image: url(..img/wrench.png);
 	width: 400px;
 	height: 400px;
+}
+
+.backgroundImage:hover {
+	background-image:url(../img/clock.png);
+}
 h1 {
 font-family: "Playwrite NZ Basic", cursive;
 }
