--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,13 +15,13 @@ body {
 }
 
 .backgroundImage {
-	background-Image: url(..img/wrench.png);
+	background-image: url(..img/wrench.png);
 	width: 400px;
 	height: 400px;
 }
 
 .backgroundImage:hover {
-	background-image:url(../img/clock.png);
+	background-image: url(../img/clock.png);
 }
 h1 {
 font-family: "Playwrite NZ Basic", cursive;
